increased minimal guttersize to avoid size jump

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -26,6 +26,10 @@ body {
   font-family: "Fira Code";
 }
 
+.ͼ1 .cm-gutter {
+  min-width: 3ch;
+}
+
 .drag {
   app-region: drag;
 }
